fix: contato scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 html {
-  overflow-y: scroll;
+  scrollbar-gutter: stable both-edges;
 }
 
 @theme {
